# winit-regtest

./: Cargo.toml  Readme.md
expected/: keyboard.txt
framework/: Cargo.toml
framework/src/: main.rs
tests-current/: Cargo.toml  keyboard.txt  mouse.txt  src
tests-previous/: Cargo.toml
tests-previous/src/: main.rs
