[package]
name = "tests-current"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { git = "https://github.com/mahkoh/winit.git", rev = "6f91c74bcb115eaa5a49882d8d6e4c8be2bfa8de", features = ["serde"] }
simple_logger = "1.15"
enigo = "0.0.14"
serde_json = "1.0"
serde = "1.0"
once_cell = "1"
